<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, LoginActivity!</string>
    <string name="app_name">کاهش وزن</string>
    <string name="login_page_title">مشخصات خود را وارد کنید</string>
    <string name="female">زن</string>
    <string name="male">مرد</string>
    <string name="weight">وزن</string>
    <string name="height">قد</string>
    <string name="birthDate">تاریخ تولد</string>
    <string name="save">ذخیره</string>
    <string name="sex">جنسیت</string>
    <string name="title_activity_stat_screen">StatScreenActivity</string>
    <string name="skip_button">skip</string>
    <string name="dont_show_button">don\'t show again</string>
    <string name="activity_main">MainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="fragment_status">امروز</string>
    <string name="fragment_log">تقویم</string>
    <string name="fragment_foods">لیست غذاها</string>
    <string name="fragment_workout">تمرین</string>
    <string name="std_unit">گرم</string>
    <string name="activity_level">میزان فعالیت روزانه خود را مشخص کنید.</string>
    <string name="today_advice"><u>توصیه های امروز</u></string>
    <string name="activity_daily_log">گزارش روزانه</string>
    <string name="setting">تنظیمات</string>
    <string name="add_your_food">اضافه کردن غذای خودتان</string>
    <string name="centimeter">سانتی‌متر</string>
    <string name="kilogram">کیلوگرم</string>
    <string name="you_want">شما می‌خواهید</string>
    <string name="text_2">به میزان</string>
    <string name="text_3">طی مدت </string>
    <string name="text_4">شوید. </string>
    <string name="login_message">لطفا اطلاعات خود را به طور کامل وارد نمایید.</string>
    <string name="lady">خانم</string>
    <string name="gentle">آقا</string>
    <string name="no_goal_message">شما هدفی برای خود تعیین نکرده اید. \n حفظ وزن برای شما به عنوان هدف تعیین شده است.</string>
    <string name="set_goal">تعیین هدف</string>
    <string name="food_name">نام غذا</string>
    <string name="food_category">دسته بندی</string>
    <string name="food_standard_calorie">انرژی در هر ۱۰۰ گرم</string>
    <string name="food_2nd_unit">واحد فرعی</string>
    <string name="food_2nd_unit_calorie">انرژی واحد فرعی</string>

    <string-array name="meals_array">
        <item>صبحانه</item>
        <item>ناهار</item>
        <item>شام</item>
        <item>میان وعده</item>
    </string-array>
    <string-array name="main_tabs_array">
        <item>امروز</item>
        <item>غذاها</item>
        <item>تقویم</item>
    </string-array>

    <!-- Activity Levels -->
    <string name="very_low">very low</string>
    <string name="low">low</string>
    <string name="medium">medium</string>
    <string name="high">high</string>
    <string name="very_high">ver high</string>

    <!-- goal activity spinners entries -->
    <string-array name="weight_policy">
        <item>لاغر</item>
        <item>چاق</item>
    </string-array>
    <string-array name="time_scale">
        <item>هفته</item>
        <item>ماه</item>
    </string-array>

</resources>