<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:persianDatePicker="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:fillViewport="true"
    android:orientation="vertical"
    android:weightSum="20" >

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5" />

    <TextView
        android:id="@+id/above_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/you_want" />

    <LinearLayout
        android:id="@+id/LLgoalweight"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kilogram" />

        <EditText
            android:id="@+id/goal_weight"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LLgoalTime"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dip" >

        <Spinner
            android:id="@+id/spinner_goal_duration_scale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/time_scale" />

        <EditText
            android:id="@+id/goal_duration"
            android:layout_width="50dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LLpolicy"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_4" />

        <Spinner
            android:id="@+id/spinner_lose_or_gain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/weight_policy" />
    </LinearLayout>

    <Button
        android:id="@+id/save_goal"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dip"
        android:layout_weight="1"
        android:text="@string/save" />

</LinearLayout>