<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:persianDatePicker="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2"
    android:orientation="vertical"
    android:weightSum="9" >

    <!-- Register Form -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:padding="10dip"
        android:weightSum="11" >

        <!-- Weight -->

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/kilogram"
            android:textColor="#372c24"
            android:textSize="13sp" />

        <net.simonvt.numberpicker.NumberPicker
            android:id="@+id/weight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" >
        </net.simonvt.numberpicker.NumberPicker>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/weight"
            android:textColor="#372c24"
            android:textSize="15sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <!-- Height -->
        <!--
            <EditText
                android:id="@+id/height"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:layout_weight="2"
                android:inputType="number"
                android:singleLine="true" />
			<NumberPicker 
			    android:id="@+id/height"
                android:layout_width="0dp"
			    android:layout_weight="2"
			    
                android:layout_height="wrap_content" 
			    />
        -->

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/centimeter"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <net.simonvt.numberpicker.NumberPicker
            android:id="@+id/height"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" >
        </net.simonvt.numberpicker.NumberPicker>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/height"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:padding="10dip"
        android:weightSum="9" >

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <net.simonvt.numberpicker.NumberPicker
            android:id="@+id/npYear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" >
        </net.simonvt.numberpicker.NumberPicker>

        <net.simonvt.numberpicker.NumberPicker
            android:id="@+id/npMonth"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="2" >
        </net.simonvt.numberpicker.NumberPicker>

        <net.simonvt.numberpicker.NumberPicker
            android:id="@+id/npDay"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >
        </net.simonvt.numberpicker.NumberPicker>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/birthDate"
            android:textColor="#372c24" />
    </LinearLayout>

    <!-- Sex Radio button -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:paddingTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="horizontal"
        android:weightSum="9" >

        <ImageView
            android:id="@+id/man_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:src="@drawable/activity_level_high" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/lady"
            android:textColor="#372c24" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/gentle"
            android:textColor="#372c24" />

        <ImageView
            android:id="@+id/woman_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:src="@drawable/activity_level_low" />

        <!-- Birth Date -->

    </LinearLayout>
    <!-- Submit button -->

    <Button
        android:id="@+id/btnsave"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dip"
        android:layout_weight="1"
        android:text="@string/save" />
    <!-- Link to Registration Screen -->

</LinearLayout>